--- a/pbb-evpn/templates/pbb-evpn-base.xml
+++ b/pbb-evpn/templates/pbb-evpn-base.xml
@@ -1,5 +1,6 @@
 <config-template xmlns="http://tail-f.com/ns/config/1.0">
   <devices xmlns="http://tail-f.com/ns/ncs">
+  <device>
       <name>{$PE-DEVICE}</name>
                  <config>
                     <interface xmlns="http://tail-f.com/ned/cisco-ios-xr" tags="merge" when="{/link/interface-type='TenGigabitEthernet'}">
@@ -30,7 +31,7 @@
                        <TenGigE>
                          <id>{$PE-PORT-1}.{$SVLAN-ID}</id>
                          <mode>l2transport</mode>
-                         <description>[UNI-N] [$CEDD Name/CEMUDD Name] [{/customer}] [Kundennummer(Service-ID)]</description>
+                         <description>[UNI-N] [$CEDD Name/CEMUDD Name] [{/customer-name}] [Kundennummer(Service-ID)]</description>
                          <encapsulation>
                            <dot1q>
                              <vlan-id>{$SVLAN-ID}</vlan-id>
