--- a/pbb-evpn/templates/pbb-evpn-lag-loop.xml
+++ b/pbb-evpn/templates/pbb-evpn-lag-loop.xml
@@ -1,20 +1,111 @@
 <config-template xmlns="http://tail-f.com/ns/config/1.0">
   <devices xmlns="http://tail-f.com/ns/ncs">
-    <device>
-      <!--
-          Select the devices from some data structure in the service
-          model. In this skeleton the devices are specified in a leaf-list.
-          Select all devices in that leaf-list:
-      -->
-      <name>{/device}</name>
-      <config>
-        <!--
-            Add device-specific parameters here.
-            In this skeleton the, java code sets a variable DUMMY, use it
-            to set something on the device e.g.:
-            <ip-address-on-device>{$DUMMY}</ip-address-on-device>
-        -->
-      </config>
-    </device>
+               <device>
+                  <name>{$PE-DEVICE}</name>
+                 <config>
+                   <interface xmlns="http://tail-f.com/ned/cisco-ios-xr" tags="merge" when="{/eline/link/interface-type='GigabitEthernet'}">
+                     <Bundle-Ether>
+                       <id>1</id>
+                       <description>Test</description>
+                     </Bundle-Ether>
+                     <Bundle-Ether-subinterface>
+                       <Bundle-Ether>
+                         <id>1.199</id>
+                         <description>MGMT</description>
+                       </Bundle-Ether>
+                       <Bundle-Ether>
+                         <id>1.{$SVLAN-ID}</id>
+                          <mode>l2transport</mode>
+                         <description>[UNI-N] [$CEDD Name] [{$CUSTOMER-NAME}] [$Kundennummer($Service-ID)]</description>
+                         <encapsulation>
+                           <dot1q>
+                             <vlan-id>{$SVLAN-ID}</vlan-id>
+                           </dot1q>
+                         </encapsulation>
+                         <rewrite>
+                           <ingress>
+                             <tag>
+                               <pop>1</pop>
+                               <mode>symmetric</mode>
+                             </tag>
+                           </ingress>
+                         </rewrite>
+                         <l2protocol>
+                           <cpsv>tunnel</cpsv>
+                         </l2protocol>
+                       </Bundle-Ether>
+                     </Bundle-Ether-subinterface>
+
+                     <GigabitEthernet>
+                       <id>{$PE-PORT-1}</id>
+                       <bundle>
+                         <id>
+                           <id-value>1</id-value>
+                         </id>
+                       </bundle>
+                     </GigabitEthernet>
+                     <GigabitEthernet tags="merge" foreach="{/eline/link/Bundle-Ether/pe-port/pe-port}">
+                       <id>{$PE-PORT}</id>
+                       <bundle>
+                         <id>
+                           <id-value>1</id-value>
+                           <mode>active</mode>
+                         </id>
+                       </bundle>
+                     </GigabitEthernet>
+                   </interface>
+
+
+                   <interface xmlns="http://tail-f.com/ned/cisco-ios-xr" tags="merge" when="{/eline/link/interface-type='TenGigabitEthernet'}">
+                     <Bundle-Ether>
+                       <id>1</id>
+                       <description>Test</description>
+                     </Bundle-Ether>
+                     <Bundle-Ether-subinterface>
+                       <Bundle-Ether>
+                         <id>1.199</id>
+                         <description>MGMT</description>
+                       </Bundle-Ether>
+                       <Bundle-Ether>
+                         <id>1.{$SVLAN-ID}</id>
+                          <mode>l2transport</mode>
+                         <description>[UNI-N] [$CEDD Name] [{$CUSTOMER-NAME}] [$Kundennummer($Service-ID)]</description>
+                         <encapsulation>
+                           <dot1q>
+                             <vlan-id>{$SVLAN-ID}</vlan-id>
+                           </dot1q>
+                         </encapsulation>
+                         <rewrite>
+                           <ingress>
+                             <tag>
+                               <pop>1</pop>
+                               <mode>symmetric</mode>
+                             </tag>
+                           </ingress>
+                         </rewrite>
+                         <l2protocol>
+                           <cpsv>tunnel</cpsv>
+                         </l2protocol>
+                       </Bundle-Ether>
+                     </Bundle-Ether-subinterface>
+                     <TenGigE>
+                       <id>{$PE-PORT-1}</id>
+                       <bundle>
+                         <id>
+                           <id-value>1</id-value>
+                         </id>
+                       </bundle>
+                     </TenGigE>
+                     <TenGigE tags="merge" foreach="{/eline/link/Bundle-Ether/pe-port/pe-port}">
+                       <id>{$PE-PORT}</id>
+                       <bundle>
+                         <id>
+                           <id-value>1</id-value>
+                         </id>
+                       </bundle>
+                     </TenGigE>
+                   </interface>
+                 </config>
+               </device>
   </devices>
 </config-template>
