--- a/pbb-evpn/templates/pbb-evpn-base-etree.xml
+++ b/pbb-evpn/templates/pbb-evpn-base-etree.xml
@@ -28,7 +28,7 @@
                              </limit>
                            </mac>
                            <interface>
-                             <name>{/etree/link/interface-type}{$PE-PORT-1}.{$SVLAN-ID}</name>
+                             <name>{$PE-PORT-TYPE}{$PE-PORT-1}.{$SVLAN-ID}</name>
                            </interface>
                            <pbb>
                              <edge>
