--- a/pbb-evpn/templates/pbb-evpn-lag-loop-etree-gig.xml
+++ b/pbb-evpn/templates/pbb-evpn-lag-loop-etree-gig.xml
@@ -3,7 +3,7 @@
                <device>
                   <name>{$PE-DEVICE}</name>
                  <config>
-                   <interface xmlns="http://tail-f.com/ned/cisco-ios-xr" tags="merge" when="{/etree/link/interface-type='GigabitEthernet'}">
+                   <interface xmlns="http://tail-f.com/ned/cisco-ios-xr">
                      <Bundle-Ether>
                        <id>1</id>
                        <description>Test</description>
@@ -35,7 +35,6 @@
                          </l2protocol>
                        </Bundle-Ether>
                      </Bundle-Ether-subinterface>
-
                      <GigabitEthernet>
                        <id>{$PE-PORT-1}</id>
                        <bundle>
@@ -53,57 +52,6 @@
                          </id>
                        </bundle>
                      </GigabitEthernet>
-                   </interface>
-
-
-                   <interface xmlns="http://tail-f.com/ned/cisco-ios-xr" tags="merge" when="{/etree/link/interface-type='TenGigabitEthernet'}">
-                     <Bundle-Ether>
-                       <id>1</id>
-                       <description>Test</description>
-                     </Bundle-Ether>
-                     <Bundle-Ether-subinterface>
-                       <Bundle-Ether>
-                         <id>1.199</id>
-                         <description>MGMT</description>
-                       </Bundle-Ether>
-                       <Bundle-Ether>
-                         <id>1.{$SVLAN-ID}</id>
-                          <mode>l2transport</mode>
-                         <description>[UNI-N] [$CEDD Name] [{$CUSTOMER-NAME}] [$Kundennummer($Service-ID)]</description>
-                         <encapsulation>
-                           <dot1q>
-                             <vlan-id>{$SVLAN-ID}</vlan-id>
-                           </dot1q>
-                         </encapsulation>
-                         <rewrite>
-                           <ingress>
-                             <tag>
-                               <pop>1</pop>
-                               <mode>symmetric</mode>
-                             </tag>
-                           </ingress>
-                         </rewrite>
-                         <l2protocol>
-                           <cpsv>tunnel</cpsv>
-                         </l2protocol>
-                       </Bundle-Ether>
-                     </Bundle-Ether-subinterface>
-                     <TenGigE>
-                       <id>{$PE-PORT-1}</id>
-                       <bundle>
-                         <id>
-                           <id-value>1</id-value>
-                         </id>
-                       </bundle>
-                     </TenGigE>
-                     <TenGigE tags="merge" foreach="{/etree/link/Bundle-Ether/pe-port/pe-port}">
-                       <id>{$PE-PORT}</id>
-                       <bundle>
-                         <id>
-                           <id-value>1</id-value>
-                         </id>
-                       </bundle>
-                     </TenGigE>
                    </interface>
                  </config>
                </device>
