--- a/pbb-evpn/templates/pbb-evpn-interface-gig.xml
+++ b/pbb-evpn/templates/pbb-evpn-interface-gig.xml
@@ -3,55 +3,7 @@
   <device>
       <name>{$PE-DEVICE}</name>
                  <config>
-                    <interface xmlns="http://tail-f.com/ned/cisco-ios-xr" tags="merge" when="{/etree/link/interface-type='TenGigabitEthernet'}">
-                     <TenGigE>
-                       <id>{$PE-PORT-1}</id>
-                       <description>[UNI-N] [$Leitungs-ID] [$CEDD Name/CEMUDD Name]</description>
-                       <load-interval>30</load-interval>
-                       <mtu>9022</mtu>
-                     </TenGigE>
-                     <TenGigE-subinterface>
-                       <TenGigE>
-                         <id>{$PE-PORT-1}.199</id>
-                         <description>[UNI-N] [$CEDD Name] [Management]</description>
-                         <encapsulation>
-                           <dot1q>
-                             <vlan-id>199</vlan-id>
-                           </dot1q>
-                         </encapsulation>
-                         <rewrite>
-                           <ingress>
-                             <tag>
-                               <pop>1</pop>
-                               <mode>symmetric</mode>
-                             </tag>
-                           </ingress>
-                         </rewrite>
-                       </TenGigE>
-                       <TenGigE>
-                         <id>{$PE-PORT-1}.{$SVLAN-ID}</id>
-                         <mode>l2transport</mode>
-                         <description>[UNI-N] [$CEDD Name/CEMUDD Name] [{/customer}] [Kundennummer(Service-ID)]</description>
-                         <encapsulation>
-                           <dot1q>
-                             <vlan-id>{$SVLAN-ID}</vlan-id>
-                           </dot1q>
-                         </encapsulation>
-                         <rewrite>
-                           <ingress>
-                             <tag>
-                               <pop>1</pop>
-                               <mode>symmetric</mode>
-                             </tag>
-                           </ingress>
-                         </rewrite>
-                         <l2protocol>
-                           <cpsv>tunnel</cpsv>
-                         </l2protocol>
-                       </TenGigE>
-                     </TenGigE-subinterface>
-                    </interface>
-                    <interface xmlns="http://tail-f.com/ned/cisco-ios-xr" tags="merge" when="{/etree/link/interface-type='GigabitEthernet'}">
+                    <interface xmlns="http://tail-f.com/ned/cisco-ios-xr">
                      <GigabitEthernet>
                        <id>{$PE-PORT-1}</id>
                        <description>[UNI-N] [$CEDD Name] [Management]</description>
